完善更新服务